# timegym

./: Development.ipynb  Dockerfile  LICENSE  README.md  lab.sh  mkdocs.yml  pyproject.toml
dev/: 0. Synthetic Data.ipynb  1. Real Data.ipynb  2. Smoothing.ipynb  3. Semi-Synthetic Data.ipynb  4. Feature Engineering.ipynb  5. Target Engineering.ipynb  6. Forecasting Strategy.ipynb  7. Pipeline Testing.ipynb  8. Feature Testing.ipynb  9. Optimization.ipynb  utils.py
docs/: contributing.md  help.md  reference.md
examples/: 1. Quick Start.ipynb  Quick Start.ipynb  Tutorial.ipynb
timegym/: __init__.py  features.py  pipeline.py  smoothing.py  target.py  utils.py
timegym/data/: real.py  synthetic.py
